Bumps Spring Boot 3.4.3 -> 3.4.4 (part 2 - JPA compile fix)